buffer which is trancoded to UTF-8 via iconv(3). If iconv_open() does 
not find a conversion description for multibyte to UTF-8, the 
non-XInput method is used.

////////////////////////////////////////////////////////////////

Changed SharedImage::guess to fltk::guess_image. This is due to 
fact that windows dll linker needs all exported functions to be in library.
Cause SharedImage was declared as FL_API, linker assumes that all SharedImage 
functions are implemented in libfltk. So I moved SharedImage::guess out of the class
and made it FL_IMAGES_API.

////////////////////////////////////////////////////////////////

fl_color_win32.cxx loads SetDCPenColor and SetDCBrushColor functions dynamically.
Uses alternative (old) method, if those functions cannot be loaded (older windows)
from gdi32.dll

////////////////////////////////////////////////////////////////
* Added Window::Maximize
  so far for X11 and Win32
  TODO: MAC OS X version, and testing
	And added example of maximize() as part of teset/fullscreen.cxx

* Probably fixed bug: gifImage.cxx:105: error: â€˜U32â€™ was not declared
  by adding a work around to configure.in
  in crosscompilation with mingw (linux 64 bit to windows)
  And documented crosscompilation (TODO - finish it)

* Added Window::system_layout() so that it is possible to override the
  default Window::layout() method yet still do the operating system
  stuff needed to resize the window. Only tested on X11.

////////////////////////////////////////////////////////////////

Fixed glibc 2.10 compiler problems (Fedora 11 and others) with scandir()
(STR #2202, #2205, #2223)


////////////////////////////////////////////////////////////////

Fixed TextEditor::text() would return garbage if the "gap" is at the
beginning of the text buffer (STR #1987)

////////////////////////////////////////////////////////////////

fluid/Makefile didn't respect ${DESTDIR} for fltk2-config --post
(STR #1701, 2065, 2254)